# cli-web-search

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLUGINS.md  PLUGIN_EXAMPLES.md  PLUGIN_IMPLEMENTATION_VALIDATION.md  PLUGIN_SUMMARY.txt  PRD.md  PROGRESS.md  QUICK_START_PLUGINS.md  README.md  TODO.md  validate-plugins.sh
.claude-plugin/: README.md  plugin.json
.github/workflows/: ci.yml
.opencode/: README.md
debian/: changelog  control  copyright  install  rules
plugins/: README.md
plugins/claude-cli-web-search/: README.md
plugins/claude-cli-web-search/skills/web-search/: SKILL.md
plugins/opencode-cli-web-search/: README.md  index.ts  package.json
skills/fetch-url/: SKILL.md
src/: cli.rs  error.rs  fetch.rs  main.rs  mcp.rs
src/cache/: mod.rs
src/config/: loader.rs  mod.rs
src/output/: json.rs  markdown.rs  mod.rs  text.rs
src/providers/: bing.rs  brave.rs  duckduckgo.rs  firecrawl.rs  google.rs  mod.rs  serpapi.rs  serper.rs  tavily.rs
tests/: mock_providers.rs
